[gd_scene load_steps=2 format=3 uid="uid://b8rt2mphox3k1"]

[ext_resource type="Script" path="res://scripts/demos/authentication_demo.gd" id="1_auth"]

[node name="AuthenticationDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_auth")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "EpicOS Authentication Demo"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusPanel" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="StatusTitle" type="Label" parent="VBoxContainer/HBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "Platform Status: Not Initialized"

[node name="UserLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "User Status: Not Logged In"

[node name="UserInfoLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "Username: N/A"

[node name="AccountInfoLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "Epic Account ID: N/A"

[node name="ProductUserLabel" type="Label" parent="VBoxContainer/HBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "Product User ID: N/A"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="InitButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Initialize EOS Platform"

[node name="LogoutButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Logout"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "‚Üê Back to Menu"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LoginVBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EpicAccountContainer" type="VBoxContainer" parent="VBoxContainer/LoginVBoxContainer"]
layout_mode = 2

[node name="VBoxContainer_LoginSection_LoginGrid_EpicAccountPanel_EpicAccountContainer#EpicAccountLabel" type="Label" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer"]
layout_mode = 2
text = "Epic Account Login"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="EmailInput" type="LineEdit" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="EpicLoginButton" type="Button" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Login with Epic Account"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PortalLoginButton" type="Button" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Login with Account Portal"

[node name="VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel#OtherMethodsContainer" type="VBoxContainer" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel_OtherMethodsContainer#OtherMethodsLabel" type="Label" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel#OtherMethodsContainer"]
layout_mode = 2
text = "Login Method for development"
horizontal_alignment = 1

[node name="VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel_OtherMethodsContainer#DevContainer" type="HBoxContainer" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel#OtherMethodsContainer"]
layout_mode = 2

[node name="DevInput" type="LineEdit" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel#OtherMethodsContainer/VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel_OtherMethodsContainer#DevContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TestUser123"
placeholder_text = "Dev Display Name"

[node name="DevLoginButton" type="Button" parent="VBoxContainer/LoginVBoxContainer/EpicAccountContainer/VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel#OtherMethodsContainer/VBoxContainer_LoginSection_LoginGrid_OtherMethodsPanel_OtherMethodsContainer#DevContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
disabled = true
text = "Dev Login"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="OutputSection" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3

[node name="OutputLabel" type="Label" parent="VBoxContainer/OutputSection"]
layout_mode = 2
size_flags_vertical = 1
text = "Output Log"

[node name="OutputText" type="RichTextLabel" parent="VBoxContainer/OutputSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=green]Welcome to the EpicOS Authentication Demo![/color]

This demo shows how to:
1. Initialize the EOS platform
2. Use different login methods
3. Check authentication status
4. Logout

[color=yellow]Note: You need valid Epic Games credentials configured in the initialize() method.[/color]
"
scroll_following = true
